tests/errors/literals/literal-non-builtin-param.fn
---
Description: Literal declared with a non-builtin parameter type
Expected: FN3107
---

type Other
{
    init{}
}

type BadLiteral
{
    init{}

    literal also_nope(value: Other)
    {
        return BadLiteral{}
    }
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
